chore: remove dead code, fix bugs and update dependencies
Backend:
- Admin user updates only change role and affiliation; the unused name,
  email, ID-number and password fields are gone (the password branch
  skipped the temporary-password flag).
- Drop dead code: unused repository query, @Repository on Spring Data
  interfaces, @EnableWebSecurity, @JsonIgnore on relations, the
  never-filled identification number.
- CORS without unused PATCH, X-Requested-With, exposed headers or
  credentials (the token travels in a header), covered by an IT.
- JWT filter: "\s+" only removed spaces; use strip(). Deprecated
  org.springframework.lang.NonNull -> JSpecify.
- Spring Boot 4.0.8, spring-boot-starter-webmvc instead of the
  deprecated -web, jjwt 0.12.7, no redundant starter-test; properties
  without Boot defaults; local config example moved out of the jar.

Frontend:
- Avatar initials used the first word of the full name ("Ana María"
  -> "AM"); the session now keeps first and last names apart.
- Session keeps token, user and pending steps only; role comes from
  the token. Drop Dattapro leftovers (legacy redirects, tolerance for
  stale storage values, extra JWT decode in Login).
- Remove unused exports, props and variants; accented user messages.
- ESLint no longer hides unused capitalized variables.
- Dependencies updated within their ranges (React 19.3, Tailwind 4.3,
  react-hook-form 7.88, lucide 1.47...).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>